[package]
name = "embedded-term"
version = "0.2.0"
authors = [
    "Runji Wang <wangrunji0408@163.com>",
    "Yuekai Jia <equation618@gmail.com>",
    "Jiajie Chen <jiegec@qq.com>",
    "Piorpie <contact@piorpie.com>"
]
edition = "2024"
description = "Terminal emulator on embedded-graphics."
keywords = ["terminal", "no-std"]
categories = ["embedded", "gui", "no-std"]
homepage = "https://github.com/rcore-os/embedded-term"
repository = "https://github.com/rcore-os/embedded-term"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.2"
vte = { version = "0.15.0", default-features = false }
log = { version = "0.4.29", default-features = false, optional = true }
bitflags = "2.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[features]
default = ["log"]
